--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
     "graphql": "^16.6.0",
-    "mongoose": "^6.5.3"
+    "mongoose": "^6.5.3",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
